# baseapp

./: .gitlab-ci.yml  Pipfile  README.md  pyproject.toml  start.py
baseapp/: BaseApp.py  __init__.py  __main__.py
baseapp/cli/: AppCLIBuilder.py  LazyGroup.py  LogsCLIBuilder.py  Parameter.py  RoutinesCLIBuilder.py  ServicesCLIBuilder.py  __init__.py
baseapp/logger/: ColorCodes.py  Logger.py  __init__.py
baseapp/registry/: BaseRegistryObject.py  Discovery.py  Executor.py  ExecutorState.py  Parameter.py  Registry.py  __init__.py
baseapp/registry/routines/: BaseRoutine.py  RoutineExecutor.py  __init__.py
baseapp/registry/services/: BaseService.py  ServiceExecutor.py  __init__.py
tests/baseapp/: test_baseapp.py  test_log_files.py
tests/baseapp/fixtures/: ChildApp.py
tests/executor/: test_service_executor.py
tests/routines/: test_import_routine.py  test_routine_parameters.py
tests/routines/fixtures/: MockRoutine.py  MockRoutine2.py  TempRoutine.py  ThisIsNotARoutineClass.py
tests/services/: test_service_parameters.py
tests/services/fixtures/: MockService.py
tests/services/fixtures_non_discoverable/: WaitService.py
